Rename to AbstractServiceWorker